istio-destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: walklib-author-dr
  namespace: default
spec:
  host: walklib-author
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: walklib-book-dr
  namespace: default
spec:
  host: walklib-book
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: walklib-writing-dr
  namespace: default
spec:
  host: walklib-writing
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: walklib-gateway-dr
  namespace: default
spec:
  host: walklib-gateway
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
